Construção da navbar responsiva

--- a/index.html
+++ b/index.html
@@ -18,6 +18,36 @@
   <title>Lumini Energy</title>
 </head>
 <body>
-  
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
+      <div class="container py-3">
+        <a href="#" class="navbar-brand primary-color">
+          <img src="./src/img/nav-logo.svg" alt="Logo Lumini Energy">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items"
+          aria-controls="navbar-items" aria-expand="false" aria-label="Toggle navigation">
+          <i class="bi bi-list"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-items">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a href="#" class="nav-link primary-color active">Início</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link primary-color">Quem Somos</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link primary-color">Nossas Soluções</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link primary-color">Perguntas Frequentes</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link primary-color">Contato</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 </body>
 </html>
