--- a/index.html
+++ b/index.html
@@ -1,53 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Fonts - Zen Dots e Roboto -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Zen+Dots&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Zen+Dots&display=swap"
+    rel="stylesheet">
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- Bootstrap JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- CSS -->
   <link rel="stylesheet" href="./css/styles.css">
   <title>Lumini Energy</title>
 </head>
+
 <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
-      <div class="container py-3">
-        <a href="#" class="navbar-brand primary-color">
-          <img src="./src/img/nav-logo.svg" alt="Logo Lumini Energy">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items"
-          aria-controls="navbar-items" aria-expand="false" aria-label="Toggle navigation">
-          <i class="bi bi-list"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar-items">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a href="#" class="nav-link primary-color active">Início</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link primary-color">Quem Somos</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link primary-color">Nossas Soluções</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link primary-color">Perguntas Frequentes</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link primary-color">Contato</a>
-            </li>
-          </ul>
-        </div>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
+    <div class="container py-3">
+      <a href="#" class="navbar-brand primary-color">
+        <img src="./src/img/nav-logo.svg" alt="Logo Lumini Energy">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items"
+        aria-controls="navbar-items" aria-expand="false" aria-label="Toggle navigation">
+        <i class="bi bi-list"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-items">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a href="#inicio" class="nav-link primary-color active">Início</a>
+          </li>
+          <li class="nav-item">
+            <a href="./quem-somos.html" class="nav-link primary-color">Quem Somos</a>
+          </li>
+          <li class="nav-item">
+            <a href="./nossas-soluções.html" class="nav-link primary-color">Nossas Soluções</a>
+          </li>
+          <li class="nav-item">
+            <a href="#faq" class="nav-link primary-color">Perguntas Frequentes</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contato" class="nav-link primary-color">Contato</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
+  <!-- INÍCIO -->
+  <div class="container-fluid col-6 col-md-12" id="inicio">
+    <div class="container-md content-inicio">
+      <div class="container inicio-content-container">
+        <div class="header primary-color">
+          <h1>Lumini Energy</h1>
+          <h2>sua energia na palma da mão.</h2>
+        </div>
+        <p>Monitoramos o consumo de energia de suas tomadas e eletrodomésticos, permitindo que você gerencie tudo de forma
+          simples e intuitiva através do nosso aplicativo.</p>
+      </div>
+      <div class="img-inicio">
+        <img src="src/img/simbol.svg" alt="Símbolo Lumini Energy">
+      </div>
+    </div>
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="container-fluid footer" id="footer">
+    <div class="container">
+      <div class="row">
+
+        <!-- FOOTER TOP -->
+         <div class="col-12 col-md-4" id="footer-top">
+          <div class="row justify-content-between">
+            <div class="col-4"><img src="./src/img/logo-vertical.svg" alt="Logo Lumini Energy Vertical"></div>
+          </div>
+         </div>
+        <!-- FOOTER DETAILS -->
+        <div class="col-12" id="footer-details">
+          <div class="row">
+            <div class="col-12 col-md-4" id="contact-container">
+              <h4>Mídias Sociais</h4>
+              <div class="col-4 social-icons">
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-facebook"></i>
+              </div>
+            </div>
+            <div class="col-12 col-md-4" id="links-container">
+              <div class="row">
+                <h4>Menu</h4>
+                <div class="col-6">
+                  <ul class="list-unstyled footer-menu">
+                    <li><a href="#" class="footer-link primary-color">Início</a></li>
+                    <li><a href="#" class="footer-link primary-color">Quem Somos</a></li>
+                    <li><a href="#" class="footer-link primary-color">Nossas Soluções</a></li>
+                    <li><a href="#" class="footer-link primary-color">Perguntas Frequentes</a></li>
+                    <li><a href="#" class="footer-link primary-color">Contato</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- FOOTER BOTTOM -->
+         <div class="col-12" id="footer-bottom">
+            <div class="row justify-content-center">
+              <div class="col-12 col-md-3">
+                <p class="primary-color">Desenvolvido com ❤ por️ Lumini Energy</p>
+              </div>
+            </div>
+         </div>
+      </div>
+    </div>
+   </footer>
 </body>
+
 </html>
