Implementando o spinner do símbolo da Lumini na home

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           simples e intuitiva através do nosso aplicativo.</p>
       </div>
       <div class="img-inicio">
-        <img src="src/img/simbol.svg" alt="Símbolo Lumini Energy">
+        <img src="src/img/simbol.svg" alt="Símbolo Lumini Energy" class="spinner rotate">
       </div>
     </div>
   </div>
