--- a/nossas-soluções.html
+++ b/nossas-soluções.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,41 +21,172 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- CSS -->
   <link rel="stylesheet" href="./css/styles.css">
+  <!-- Navbar CSS -->
+  <link rel="stylesheet" href="./css/navbar.css">
+  <!-- Footer CSS -->
+  <link rel="stylesheet" href="./css/footer.css">
+  <!-- Solutions CSS -->
+  <link rel="stylesheet" href="./css/solutions.css">
   <title>Nossas Soluções</title>
 </head>
+
 <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
-      <div class="container py-3">
-        <a href="#" class="navbar-brand primary-color">
-          <img src="./src/img/nav-logo.svg" alt="Logo Lumini Energy">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items"
-          aria-controls="navbar-items" aria-expand="false" aria-label="Toggle navigation">
-          <i class="bi bi-list"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar-items">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a href="./index.html" class="nav-link primary-color">Início</a>
-            </li>
-            <li class="nav-item">
-              <a href="./quem-somos.html" class="nav-link primary-color">Quem Somos</a>
-            </li>
-            <li class="nav-item">
-              <a href="./nossas-soluções.html" class="nav-link primary-color active">Nossas Soluções</a>
-            </li>
-            <li class="nav-item">
-              <a href="#faq" class="nav-link primary-color">Perguntas Frequentes</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contato" class="nav-link primary-color">Contato</a>
-            </li>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
+    <div class="container py-3">
+      <a href="#" class="navbar-brand primary-color">
+        <img src="./src/img/nav-logo.svg" alt="Logo Lumini Energy">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-items"
+        aria-controls="navbar-items" aria-expand="false" aria-label="Toggle navigation">
+        <i class="bi bi-list"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-items">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link primary-color">Início</a>
+          </li>
+          <li class="nav-item">
+            <a href="./quem-somos.html" class="nav-link primary-color">Quem Somos</a>
+          </li>
+          <li class="nav-item">
+            <a href="./nossas-soluções.html" class="nav-link primary-color active">Nossas Soluções</a>
+          </li>
+          <li class="nav-item">
+            <a href="./faq.html" class="nav-link primary-color">Perguntas Frequentes</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contato.html" class="nav-link primary-color">Contato</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- NOSSAS SOLUÇÕES -->
+  <div class="container-fluid container-nossas-solucoes">
+    <div class="container title-nossas-solucoes">
+      <h2>Nossas Soluções</h2>
+    </div>
+    <div class="container content-nossas-solucoes">
+      <h4>Você sabia que aparelhos em Stand-by podem ser responsáveis em até:</h4>
+      <div class="span-content-12">
+        <span>12%</span>
+        <h4>do consumo total de energia elétrica da sua residência?</h4>
+      </div>
+    </div>
+    <!-- PRIMEIRA PARTE -->
+    <div class="container contant-nossas-solucoes-1">
+      <div class="paragraph-1">
+        <p>Apresentamos o <span>Lumiwire</span>, nossa solução inovadora para otimizar o consumo de energia em sua residência ou empresa.<br><br>
+          Com o <span>Lumiwire</span>, você pode monitorar e gerenciar o consumo energético de qualquer equipamento conectado a sua rede elétrica. Com a instalação você obtém  informações detalhadas sobre o gasto de energia em tempo real.<br><br>
+          Além disso, o Lumiwire oferece a funcionalidade de <span>desativar automaticamente</span> o fornecimento de energia para os dispositivos que estão em modo <span>stand-by</span>, eliminando desperdícios e promovendo maior eficiência energética.<br><br>
+          Com o <span>Lumiwire</span>, você tem o controle total da sua rede elétrica, economizando recursos e contribuindo para um consumo mais sustentável.
+        </p>
+      </div>
+      <div class="img-nossas-solucoes-1">
+        <img src="./src/img/eletrodomesticos.png" alt="Eletrodomesticos">
+      </div>
+    </div>
+    <!-- SEGUNDA PARTE -->
+    <div class="container contant-nossas-solucoes-2">
+      <div class="img-nossas-solucoes-2">
+        <img src="./src/img/cellphone-mockup.png" alt="Celular com o aplicativo Lumini Energy">
+      </div>
+      <div class="paragraph-2">
+        <h4>Com o <span>Lumiwire</span> você consegue não só economizar dinheiro como também automatizar os seus eletrodomésticos!</h4>
+        <p>O nosso objetivo é facilitar a forma como você lida com a energia elétrica, dessa forma criamos a nossa solução para além de acompanhar o gasto de energia, basta você selecionar o cômodo que ativamos e desativamos o fluxo de energia dela para a sua economia e controle do equipamento (on/off).</p>
+      </div>
+    </div>
+    <!-- TERCEIRA PARTE -->
+    <div class="container contant-nossas-solucoes-3">
+      <div class="paragraph-3">
+        <h4>O <span>Lumiwire</span> permite que você monitore e reduza os riscos de curtos elétricos em veículos.</h4>
+        <p>Monitoramento em tempo real e gestão de recursos de carros elétricos e mecânicos, cortando a fonte de energia quando identificado um impacto no veículo.</p>
+      </div>
+      <div class="img-nossas-solucoes-3">
+        <img src="./src/img/formula-e.png" alt="Carro de Fórmula E">
+      </div>
+    </div>
+    <!-- QUARTA PARTE -->
+    <div class="container contant-nossas-solucoes-4">
+      <div class="img-nossas-solucoes-4">
+        <img src="./src/img/industria.png" alt="Indústria">
+      </div>
+      <div class="paragraph-4">
+        <h4>Nossa solução também <span>monitora</span> equipamentos <span>industriais</span> e otimizam o seu <span>consumo</span> elétrico.</h4>
+        <p>Mensurando o gasto de energia e otimizando o consumo de energia na indústria.</p>
+      </div>
+    </div>
+
+
+  </div>
+
+  <!-- FOOTER -->
+  <footer class="container-fluid footer">
+
+    <div class="row footer-content">
+
+      <!-- LOGO -->
+      <div class="col-2 footer-logo">
+        <img src="./src/img/logo-vertical.svg" alt="Logo Lumini Energy Vertical">
+      </div>
+
+      <!-- MENU FOOTER -->
+      <div class="col-2 footer-menu">
+        <h4>Menu</h4>
+        <div>
+          <ul class="list-unstyled footer-menu-list">
+            <li><a href="./index.html" class="footer-link primary-color">Início</a></li>
+            <li><a href="./quem-somos.html" class="footer-link primary-color">Quem Somos</a></li>
+            <li><a href="./nossas-soluções.html" class="footer-link primary-color">Nossas Soluções</a></li>
+            <li><a href="./faq.html" class="footer-link primary-color">Perguntas Frequentes</a></li>
+            <li><a href="./contato.html" class="footer-link primary-color">Contato</a></li>
           </ul>
         </div>
       </div>
-    </nav>
-</body>
 
+      <!-- ADDRESS -->
+      <div class="col-4 footer-address">
+        <h4>Endereço</h4>
+        <a href="#" class="footer-link primary-color">Av. Paulista, 1106 - 7º andar - Bela Vista, São Paulo - SP,
+          01311-000</a>
+      </div>
+
+      <!-- SOCIAL MEDIA -->
+      <div class="col-2 footer-social-media">
+        <h4>Mídias Sociais</h4>
+        <div class="col social-icons">
+          <i class="bi bi-linkedin"></i>
+          <i class="bi bi-instagram"></i>
+          <i class="bi bi-facebook"></i>
+        </div>
+      </div>
+
+      <!-- TERMS & CONDITIONS -->
+      <div class="col-2 footer-menu">
+        <h4>Termos de Uso e<br>Políticas de Privacidade</h4>
+        <div>
+          <ul class="list-unstyled footer-menu-list">
+            <li><a href="#" class="footer-link primary-color">Termos de Uso</a></li>
+            <li><a href="#" class="footer-link primary-color">Políticas de Privacidade</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- DESENVOLVIDO POR LUMINI ENERGY -->
+    <div class="container-fluid footer-bottom">
+      <p class="primary-color">Desenvolvido com ❤ por️ Lumini Energy</p>
+      <h4>Projeto Global Solution - Engenharia de Software - FIAP ON</h4>
+      <p>
+        Guilherme Alves Rodrigues Ferreira<br>
+        Guilherme Rafael Schumann Carvalho<br>
+        João Pedro Brehula Souza<br>
+        Joao Pedro Diniz Fernandes de Oliveira<br>
+        Mariana Secchi Sanches<br>
+      </p>
+    </div>
+  </footer>
+</body>
 
 </html>
